dtor/tests/errors/dtor-bad-function.stderr
error: Invalid dtor function. Expected a function with no args, return value, or type parameters.
       Valid forms are: [pub] [unsafe] [extern $abi] fn $name() { ... }
 --> tests/errors/dtor-bad-function.rs:3:1
  |
3 | #[dtor]
  | ^^^^^^^
  |
  = note: this error originates in the macro `$crate::__dtor_parse_impl` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid dtor function. Expected a function with no args, return value, or type parameters.
       Valid forms are: [pub] [unsafe] [extern $abi] fn $name() { ... }
 --> tests/errors/dtor-bad-function.rs:7:1
  |
7 | #[dtor]
  | ^^^^^^^
  |
  = note: this error originates in the macro `$crate::__dtor_parse_impl` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid dtor function. Expected a function with no args, return value, or type parameters.
       Valid forms are: [pub] [unsafe] [extern $abi] fn $name() { ... }
  --> tests/errors/dtor-bad-function.rs:11:1
   |
11 | #[dtor]
   | ^^^^^^^
   |
   = note: this error originates in the macro `$crate::__dtor_parse_impl` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)
